--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.6.1",
     "react-router": "^7.7.0",
+    "react-router-hash-link": "^2.4.3",
     "sass": "^1.85.1"
   },
   "devDependencies": {
