--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next": "^25.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.6.1",
     "react-router": "^7.7.0",
     "react-router-hash-link": "^2.4.3",
